welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while (!estSurBiscuit())
{recule()}
prendBiscuit()
if (porteBiscuit())
{while (!estSurBiscuit())
{avance()}
else {while (!estSurBiscuit())
{recule()}
prendBiscuit()}
